--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       <div class="container">
 
         <header class="section-header">
-          <h3>About Us</h3>
+          <h3>About Me</h3>
           <p>I am a young programmer. I am still in the field of programming. I recommend this area to many people. Now the times are on the rise and so are the social networks. That is why work is being found at every step...</p>
         </header>
 
