--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/no.jpg" class="img-fluid-teach" alt="">
+              <img src="img/nursh.jpg" class="img-fluid-teach" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Nurshod Ochilov</h4>
