--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
             <div class="portfolio-wrap">
               <figure class="figure-website">
                 <img src="img/web-1.jpg" class="img-fluid" alt="">
-                <a href="img/web-1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-1.jpg" data-lightbox="portfolio" data-title="App 1" class="link-preview" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="https://sukhrobegamberdiyev.uz/" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -454,8 +454,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/web-6.jpg" class="img-fluid" alt="">
-                <a href="img/web-6.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-6.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -469,12 +469,12 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/web-2.jpg" class="img-fluid" alt="">
-                <a href="img/web-2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-2.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="#">PORTFOLIO</a></h4>
+                <h4><a target="_blank" href="#">PORTFOLIO</a></h4>
                 <a target="_blank" href="https://shakhzodtojiyev.uz/"><p>SHAKHZOD TOJIYEV</p></a>
               </div>
             </div>
@@ -484,8 +484,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/web-9.jpg" class="img-fluid" alt="">
-                <a href="img/web-9.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-9.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -499,8 +499,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/web-7.jpg" class="img-fluid" alt="">
-                <a href="img/web-7.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-7.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 2" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -514,8 +514,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/web-8.jpg" class="img-fluid" alt="">
-                <a href="img/web-8.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-8.jpg" class="link-preview" data-lightbox="portfolio" data-title="App 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -529,8 +529,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/web-4.jpg" class="img-fluid" alt="">
-                <a href="img/web-4.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-4.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="https://shuhratisroilov.uz/" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -544,8 +544,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/web-12.jpg" class="img-fluid" alt="">
-                <a href="img/web-12.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-12.jpg" class="link-preview" data-lightbox="portfolio" data-title="Card 3" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="http://navbahormtb.uz/" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -559,8 +559,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="img/web-5.jpg" class="img-fluid" alt="">
-                <a href="img/web-5.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
-                <a href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
+                <a target="_blank" href="img/web-5.jpg" class="link-preview" data-lightbox="portfolio" data-title="Web 1" title="Preview"><i class="ion ion-eye"></i></a>
+                <a target="_blank" href="#" class="link-details" title="More Details"><i class="ion ion-android-open"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -708,7 +708,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/nursh.jpg" class="img-fluid-teach" alt="">
+              <img src="img/no.jpg" class="img-fluid-teach" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Nurshod Ochilov</h4>
@@ -875,11 +875,11 @@
             </p>
 
             <div class="social-links">
-              <a href="#" class="twitter"><i class="fa fa-youtube"></i></a>
-              <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="fa fa-google-plus"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
+              <a target="_blank" href="https://m.youtube.com/channel/UCgdHn-ZBltleegUphIGbogw" class="youtube"><i class="fa fa-youtube"></i></a>
+              <a target="_blank" href="https://t.me/ecoderUzb" class="telegram"><i class="fa fa-telegram"></i></a>
+              <a target="_blank" href="https://www.instagram.com/esuxrob874/" class="instagram"><i class="fa fa-instagram"></i></a>
+              <a target="_blank" href="https://github.com/suxrobegamberdiyev" class="google"><i class="fa fa-github"></i></a>
+              <a target="_blank" href="https://www.quora.com/" class="quora"><i class="fa fa-quora"></i></a>
             </div>
 
           </div>
@@ -890,7 +890,7 @@
               Region : Navai <br>
               City : Navai <br>
               Street: Mahmoud Tarobiy <br>
-              Home : 54</p>
+              Home : 54 - number</p>
             <!-- <form action="" method="post">
               <input type="email" name="email"><input type="submit"  value="Subscribe">
             </form> -->
