--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/deigner 4.jpg" alt=""></div>
+            <div class="carousel-background"><img src="img/office-gadgets.jpgF" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>I'AM VIDEO MONTAGE</h2>
@@ -505,7 +505,7 @@
 
               <div class="portfolio-info">
                 <h4><a href="#">IT CENTER</a></h4>
-                <p>SUKHROB EGAMBERDIYEV<p>
+                <p>SUKHROB EGAMBERDIYEV<p>  
               </div>
             </div>
           </div>
@@ -708,7 +708,7 @@
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div class="member">
-              <img src="img/no.jpg" class="img-fluid-teach" alt="">
+              <img src="img/nursh.jpg" class="img-fluid-teach" alt="">
               <div class="member-info">
                 <div class="member-info-content">
                   <h4>Nurshod Ochilov</h4>
