--- a/index.html
+++ b/index.html
@@ -27,12 +27,6 @@
   <!-- Main Stylesheet File -->
   <link href="css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-    Theme Name: BizPage
-    Theme URL: https://bootstrapmade.com/bizpage-bootstrap-business-template/
-    Author: BootstrapMade.com
-    License: https://bootstrapmade.com/license/
-  ======================================================= -->
 </head>
 
 <body>
@@ -128,7 +122,7 @@
           </div>
 
           <div class="carousel-item">
-            <div class="carousel-background"><img src="img/office-gadgets.jpgF" alt=""></div>
+            <div class="carousel-background"><img src="img/office-gadgets.jpg" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>I'AM VIDEO MONTAGE</h2>
